// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Containers::Header renders correctly 1`] = `
<div
  className="header"
>
  <h3
    className="title"
  >
    <a
      onClick={[Function]}
      style={Object {}}
      target="_blank"
    >
      <span>
        Your awesome title
      </span>
    </a>
  </h3>
  <span
    className="version"
  >
    v
    0.10.2
  </span>
</div>
`;

exports[`Containers::Header renders placeholder title 1`] = `
<div
  className="header"
>
  <h3
    className="title"
  >
    <a
      onClick={[Function]}
      style={Object {}}
      target="_blank"
    >
      <span>
        Website Admin Panel
      </span>
    </a>
  </h3>
  <span
    className="version"
  >
    v
    0.10.2
  </span>
</div>
`;
